--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "p1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/maze.js",
   "scripts": {
-    "start": "pnpm build && node dist/maze.js",
+    "start": "esbuild --serve=8000 --servedir=public",
+    "build": "esbuild web/main.ts --bundle --outfile=public/bundle.js --minify",
+    "start:node": "pnpm build:node && node dist/maze.js",
     "test": "jest",
-    "build": "tsc"
+    "build:node": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,8 @@
   "packageManager": "pnpm@10.12.4",
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.12",
+    "esbuild": "^0.21.3",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
